@@ -19,7 +19,6 @@
  * 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
  ****************************************************************
- * $Id$ FAU
  */
 
 #include <stdio.h>
